# kalman_tracking

./: .gitignore  .pre-commit-config.yaml  Inner_Detector_simulation.py  README.md  Track_reconstruction.md  full_visualization.py  generate_track.ipynb  generate_track.py  main.py  particles_tracks.py  particules_tracks.py  pyproject.toml  test.ipynb  usage.py  visualization.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: test-checkpoint.ipynb
notebooks/: runge-kutta.ipynb  test.ipynb
src/: Inner_Detector_simulation.py  TrackGenerator.py  __init__.py  track_reconstruction.py
tests/: test_basic.py
