[project]
name = "kalman-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "scipy>=1.16.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
line-ending = "auto"
indent-style = "space"
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "RUF", "UP"]
ignore = [
    "E501", # long line
]